--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <div class="relative group bg-black border-4 border-[#B8CFCE] card lg:flex-1 h-48 lg:h-full cursor-pointer transition-all duration-400 lg:odd:-translate-y-5 lg:even:translate-y-5 hover:grayscale-0 lg:hover:flex-[3] hover:h-full lg:hover:h-full">
                     <img src="img/bg_55.png" class="w-full h-full object-cover" />
                     <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
-                        <p class="text-white text-center px-4 text-sm lg:text-base max-w-[90%] max-h-[90%] overflow-auto hide-scrollbar">
+                        <p class="text-white text-center px-4 md:text-4xl lg:text-base max-w-[90%] max-h-[90%] overflow-auto hide-scrollbar">
                             My interest in the IT field began in high school when I took ICT as my TLE subject in 9th grade. That's where I learned my first IT skills, such as computer troubleshooting, hardware basics, and gained insights into various areas of IT. When I went to college, I chose to study Computer Science to further expand my knowledge in software development and programming.
                         </p>
                     </div>
@@ -181,7 +181,7 @@
                 <div class="relative border-4 border-[#B8CFCE] card lg:flex-1 h-48 lg:h-full cursor-pointer transition-all duration-[400ms] lg:odd:-translate-y-5 lg:even:translate-y-5 hover:grayscale-0 lg:hover:flex-[3] hover:h-full lg:hover:h-full">
                     <img src="img/laravel.png" class="w-full h-full object-cover" />
                     <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
-                        <p class="text-white text-center px-4 text-sm lg:text-base">
+                        <p class="text-white text-center px-4 text-sm lg:text-base md:text-4xl">
                             I have strong experience in web development using Laravel, including the TALL stack and the Inertia Vue approach. While my focus is on backend development, I am also proficient in Livewire, Tailwind CSS, and Alpine.js.
                         </p>
                     </div>
@@ -190,7 +190,7 @@
                 <div class="relative border-4 border-[#B8CFCE] card lg:flex-1 h-48 lg:h-full cursor-pointer transition-all duration-[400ms] lg:odd:-translate-y-5 lg:even:translate-y-5 hover:grayscale-0 lg:hover:flex-[3] hover:h-full lg:hover:h-full">
                     <img src="img/toga.png" class="w-full h-full object-cover" />
                     <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
-                        <p class="text-white text-center px-4 text-sm lg:text-base max-w-[90%] max-h-[90%] overflow-auto hide-scrollbar">
+                        <p class="text-white text-center px-4 md:text-4xl lg:text-base max-w-[90%] max-h-[90%] overflow-auto hide-scrollbar">
                             I graduated with a Bachelor of Science in Computer Science in 2024, focusing on the development field. Since then, I have been continuously honing my skills through hands-on experience and practical projects.
                         </p>
                     </div>
@@ -199,7 +199,7 @@
                 <div class="relative border-4 border-[#B8CFCE] card lg:flex-1 h-48 lg:h-full cursor-pointer transition-all duration-[400ms] lg:odd:-translate-y-5 lg:even:translate-y-5 hover:grayscale-0 lg:hover:flex-[3] hover:h-full lg:hover:h-full">
                     <img src="img/backend.png" class="bg-blue-500 w-full h-full object-cover" />
                     <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
-                        <p class="text-white text-center px-4 text-sm lg:text-base">
+                        <p class="text-white text-center px-4 text-sm lg:text-base md:text-4xl">
                             I specialize in backend development, with expertise in designing and managing databases using SQL Server, MySQL, and SQLite. I have experience in data analytics and creating ERDs to optimize system architecture.
                         </p>
                     </div>
@@ -208,7 +208,7 @@
                 <div class="relative border-4 border-[#B8CFCE] card lg:flex-1 h-48 lg:h-full cursor-pointer transition-all duration-[400ms] lg:odd:-translate-y-5 lg:even:translate-y-5 hover:grayscale-0 lg:hover:flex-[3] hover:h-full lg:hover:h-full">
                     <img src="img/office.jpg" class="w-full h-full object-cover" />
                     <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
-                        <p class="text-white text-center px-4 text-sm lg:text-base">
+                        <p class="text-white text-center px-4 text-sm lg:text-base md:text-4xl">
                             I work as part of a team in a corporate company, developing systems for different departments and gradually integrating them into a unified ERP system.
                         </p>
                     </div>
