--- a/index.html
+++ b/index.html
@@ -215,6 +215,25 @@
                 </div>
             </div>
         </div>
+        <div id="fourth-section" class="min-h-screen bg-[#B8CFCE]">
+            <div>Projects</div>
+            <div class="grid grid-cols-2 gap-5 px-5">
+                <div>
+                    <img src="img/ManagementDashboard/SAMPLE DATA.PNG" class="w-full h-full object-cover" />
+                </div>
+                <div>
+                    <img src="img/DentalClinic/Landing.png" class="w-full h-full object-cover" />
+                </div>
+                <div>
+                    <img src="img/QA/1.png" class="w-full h-full object-cover" />
+                </div>
+                <div>
+                    <img src="img/RecyclingManagementSystem/rms.png" class="w-full h-full object-cover" />
+                </div>
+
+            </div>
+            
+        </div>
     </body>
     <script>
         GitHubCalendar("#github-calendar", "Bartzabell", { 
