--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
         <script src="tailwind-config.js"></script>
         <link rel="icon" href="img/face-button.png" type="image/png">
         <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-        <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"/>
-        <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
 
         <title>JDR Portfolio</title>
     </head>
@@ -49,7 +47,9 @@
                             <!-- GitHub Calendar -->
                             <div class="w-full github-calendar-container font-roboto text-sm flex justify-center relative">
                                 <div class="absolute top-1 left-1 bg-black w-full h-full rounded-lg shadow-lg"></div>
-                                <div id="github-calendar" class="github-calendar w-full relative p-3 lg:p-4 border-2 border-black rounded-lg shadow-lg bg-white overflow-x-auto"></div>
+                                <div class="w-full relative p-3 lg:p-4 border-2 border-black rounded-lg shadow-lg bg-white overflow-x-auto">
+                                    <img src="https://ghchart.rshah.org/Bartzabell?timestamp=20250605" alt="GitHub chart" class="w-full">
+                                </div>
                             </div>
 
                             <!-- Text content -->
@@ -230,15 +230,7 @@
                 <div>
                     <img src="img/RecyclingManagementSystem/rms.png" class="w-full h-full object-cover" />
                 </div>
-
             </div>
-            
         </div>
     </body>
-    <script>
-        GitHubCalendar("#github-calendar", "Bartzabell", { 
-        responsive: true,
-        tooltips: false,
-        });
-    </script>
 </html>
