--- a/index.html
+++ b/index.html
@@ -46,9 +46,13 @@
                         <div class="order-2 lg:order-1 w-full lg:flex-1">
                             <!-- GitHub Calendar -->
                             <div class="w-full github-calendar-container font-roboto text-sm flex justify-center relative">
-                                <div class="absolute top-1 left-1 bg-black w-full h-full rounded-lg shadow-lg"></div>
-                                <div class="w-full relative p-3 lg:p-4 border-2 border-black rounded-lg shadow-lg bg-white overflow-x-auto">
-                                    <img src="https://ghchart.rshah.org/Bartzabell?timestamp=20250605" alt="GitHub chart" class="w-full">
+                                <!-- <div class="absolute top-1 left-1 bg-black w-full h-full rounded-lg shadow-lg"></div> -->
+                                <div class="w-full relative border-2 border-black rounded-lg shadow-lg bg-[#B8CFCE] overflow-x-auto">
+                                    <img 
+                                        src="https://github.com/Platane/snk/raw/output/github-contribution-grid-snake.svg" 
+                                        alt="GitHub Snake" 
+                                        class="w-full h-[230px]"
+                                    />
                                 </div>
                             </div>
 
