--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
             </div>
         </div>
         <div id="fourth-section" class="min-h-screen bg-[#B8CFCE]">
-            <div>Projects</div>
-            <div class="grid grid-cols-2 gap-5 px-5">
+            <div class="font-black tracking-[.5em] hover:underline text-7xl text-center pb-10 font-roboto">PROJECTS</div>
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 px-5">
                 <div>
                     <img src="img/ManagementDashboard/sampledata.png" class="w-full h-full object-cover" />
                 </div>
