--- a/index.html
+++ b/index.html
@@ -264,16 +264,36 @@
         <div id="fourth-section" class="min-h-screen bg-[#B8CFCE]">
             <div class="font-black tracking-[.5em] hover:underline text-7xl text-center pb-10 font-roboto">PROJECTS</div>
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 px-5">
-                <div>
-                    <img src="img/ManagementDashboard/sampledata.png" class="w-full h-full object-cover" />
-                </div>
-                <div>
+                <div class="mb-5 p-5 lg:p-2 text-center lg:text-left">
+                    <h1 class="font-bold text-5xl pb-2 lg:text-2xl">Appointment and Scheduling System</h1>
                     <img src="img/DentalClinic/landing.png" class="w-full h-full object-cover" />
                 </div>
-                <div>
+                <div class="mb-5 p-5 lg:p-2 text-center lg:text-left">
+                     <h1 class="font-bold text-5xl pb-2 lg:text-2xl">Quality Assurance System</h1>
                     <img src="img/QA/1.png" class="w-full h-full object-cover" />
                 </div>
-                <div>
+                <div class="mb-5 p-5 lg:p-2 text-center lg:text-left">
+                    <h1 class="font-bold text-5xl pb-2 lg:text-2xl">Performance Management System</h1>
+                    <img src="img/ManagementDashboard/sampledata.png" class="w-full h-full object-cover" />
+                </div>
+                <div class="mb-5 p-5 lg:p-2 text-center lg:text-left">
+                    <h1 class="font-bold text-5xl pb-2 lg:text-2xl">Appraisal System</h1>
+                    <img src="img/Appraisal/appraisal.png" alt="appraisal system" class="w-full h-full object-cover" />
+                </div>
+                <div class="mb-5 p-5 lg:p-2 text-center lg:text-left">
+                    <h1 class="font-bold text-5xl pb-2 lg:text-2xl">Record/Document Management System</h1>
+                    <img src="img/SchoolClinic/clinic.png" alt="Document Management System" class="w-full h-full object-cover" />
+                </div>
+                <div class="mb-5 p-5 lg:p-2 text-center lg:text-left">
+                    <h1 class="font-bold text-5xl pb-2 lg:text-2xl">Point of Sale and Appointment System</h1>
+                    <img src="img/Tyremaster/tyremaster.png" alt="Point of Sale and Appointment System" class="w-full h-full object-cover" />
+                </div>
+                <div class="mb-5 p-5 lg:p-2 text-center lg:text-left">
+                    <h1 class="font-bold text-5xl pb-2 lg:text-2xl">Inventory Management System</h1>
+                    <img src="img/Tyremaster/inventory.png" alt="Inventory Management System" class="w-full h-full object-cover" />
+                </div>
+                <div class="mb-5 p-5 lg:p-2 text-center lg:text-left">
+                    <h1 class="font-bold text-5xl pb-2 lg:text-2xl">Recycling Management System</h1>
                     <img src="img/RecyclingManagementSystem/rms.png" class="w-full h-full object-cover" />
                 </div>
             </div>
