--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script>
         <script src="https://cdn.tailwindcss.com"></script>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
@@ -34,7 +34,7 @@
                 <!-- Header -->
                 <div class="border-2 border-black bg-black pl-1 pb-1">
                     <div class="bg-[#B8CFCE] pl-2">
-                        <h1 class="text-6xl text-center lg:text-left lg:text-3xl font-bold font-doergon">JHENRICH D. ROQUIOS</h1>
+                        <h1 class="text-6xl text-center p-2 lg:text-left lg:text-3xl font-black font-inter lg:tracking-[1em] tracking-[.2em]">JHENRICH D. ROQUIOS</h1>
                     </div>
                 </div>
                 
@@ -106,7 +106,7 @@
                             </div>
                             <!-- Text content -->
                             <div class="w-full mt-2 lg:mt-5 text-center px-2 lg:px-0">
-                                <p class="text-5xl lg:text-3xl font-bold py-3 lg:py-5 leading-tight">IT Programmer at Betafoam Corporation (Current)</p>
+                                <p class="text-5xl lg:text-3xl font-bold py-3 lg:py-5 leading-tight ">IT Programmer at Betafoam Corporation (Current)</p>
                                 <p class="text-2xl lg:text-xl font-bold leading-relaxed">BS Computer Science Graduate</p>
                             </div>                                
                         </div>
@@ -262,7 +262,7 @@
             </div>
         </div>
         <div id="fourth-section" class="min-h-screen bg-[#B8CFCE]">
-            <div class="font-black tracking-[.5em] hover:underline text-7xl text-center pb-10 font-roboto">PROJECTS</div>
+            <div class="font-black tracking-[.5em] hover:underline text-6xl text-center pb-10 font-inter">TEAM PROJECTS</div>
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 px-5">
                 <div class="mb-5 p-5 lg:p-2 text-center lg:text-left">
                     <h1 class="font-bold text-5xl pb-2 lg:text-2xl">Appointment and Scheduling System</h1>
