--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <!-- Combined Section 2 & 3 - Mobile Optimized -->
-        <div id="next-section" class="min-h-screen lg:h-screen bg-white">
+        <div id="next-section" class="min-h-screen lg:h-auto bg-white">
             <div class="p-3 lg:p-5">
                 <!-- Header -->
                 <div class="border-2 border-black bg-black pl-1 pb-1">
