--- a/index.html
+++ b/index.html
@@ -22,10 +22,77 @@
             <li></li>
             <li></li>
         </ul>
-        <div class="h-screen flex items-center justify-center">
-            <a @click="document.querySelector('#next-section').scrollIntoView({ behavior: 'smooth' })" class="font-doergon font-black" x-data>
-                <button style=" --clr:#7F8CAA" class="button"><span>START</span><i></i></button>
-            </a>
+        <div class="h-screen grid grid-cols-3 p-20">
+            <div class="col-span-3 items-center text-center">
+                <h1 class="text-7xl font-square text-black tracking-[.4em]">
+                    JHENRICH D. ROQUIOS
+                </h1>
+            </div>
+            <div class="pl-0 col-span-3 flex justify-center lg:col-span-1">
+                <img src="img/me.png" class="h-[300px] w-[300px]" />
+            </div>
+            <div class="col-span-3 lg:col-span-2">
+                <div>
+                    <h2 class="text-5xl font-inter font-black tracking-[.5em] text-gray-950 leading-relaxed">
+                        FULL-STACK<br>
+                        DEVELOPER
+                    </h2>
+                    <p class="text-2xl font-inter font-bold text-gray-700 mt-2 tracking-[.5em]">
+                        BACKEND-HEAVY
+                    </p>
+                </div>
+                
+                <p class="text-xl text-gray-700 leading-relaxed tracking-[.5em]">
+                    I'm a full-stack developer mainly focused on back-end development, with some front-end capabilities.
+                </p>
+            </div>
+            <div class="col-span-3 lg:col-span-2 lg:pl-10">
+                <div>
+                    <h2 class="text-4xl font-inter font-black tracking-[.5em] text-gray-950 leading-relaxed">
+                        SERVICES
+                    </h2>
+                </div>
+                
+                <li class="text-lg text-gray-700 leading-relaxed ">
+                    Software Development and Maintenance
+                </li>
+                <li class="text-lg text-gray-700 leading-relaxed ">
+                    Web Development and Maintenance
+                </li>
+                <li class="text-lg text-gray-700 leading-relaxed ">
+                    System Projects / Thesis / Capstones 
+                </li>
+            </div>
+            <div class="flex justify-center col-span-3 lg:col-span-1 lg:justify-end lg:items-end lg:pr-20">
+                <a @click="document.querySelector('#next-section').scrollIntoView({ behavior: 'smooth' })" x-data>
+                    <button class="bg-gray-600 p-3 hover:text-white border-2 border-black">
+                        <span class="font-inter font-black text-4xl tracking-[.5em]">START</span><i></i>
+                    </button>
+                </a>
+            </div>
+            <div class="flex justify-center space-x-6 pt-4 col-span-3">
+                <div class="w-12 h-12 bg-gray-800 rounded-lg flex items-center justify-center">
+                    <a href="https://ph.linkedin.com/in/jhenrich-roquios-9a4650319">
+                        <svg class="w-6 h-6 text-white" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                        </svg>
+                    </a>
+                </div>
+                <div class="w-12 h-12 bg-gray-800 rounded-lg flex items-center justify-center">
+                    <a href="https://www.facebook.com/bartzabell.bartzabel">
+                        <svg class="w-6 h-6 text-white" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M22.675 0h-21.35C.597 0 0 .597 0 1.326v21.348C0 23.403.597 24 1.326 24H12.82V14.708h-3.42v-3.62h3.42V8.413c0-3.39 2.067-5.236 5.09-5.236 1.448 0 2.693.108 3.055.156v3.54l-2.098.001c-1.646 0-1.966.783-1.966 1.93v2.532h3.933l-.513 3.62h-3.42V24h6.705C23.403 24 24 23.403 24 22.674V1.326C24 .597 23.403 0 22.675 0z"/>
+                        </svg>
+                    </a>
+                </div>
+                <div class="w-12 h-12 bg-gray-800 rounded-lg flex items-center justify-center">
+                    <a href="https://github.com/Bartzabell">
+                        <svg class="w-6 h-6 text-white" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                        </svg>
+                    </a>
+                </div>
+            </div>
         </div>
 
         <!-- Combined Section 2 & 3 - Mobile Optimized -->
@@ -133,8 +200,8 @@
                     <!-- Contact Section -->
                     <div class="space-y-4 lg:space-y-6">
                         <div class="text-center">
-                            <h2 class="text-5xl lg:text-2xl font-bold font-doergon hover:font-academy hover:text-[#333446] hover:text-5xl lg:hover:text-3xl hover:tracking-widest transition-all duration-300">
-                                Socials and Contact
+                            <h2 class="text-5xl lg:text-4xl font-black font-inter tracking-[.1em] transition-all duration-300">
+                                Socials and Contacts
                             </h2>   
                         </div> 
 
