--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             <li></li>
         </ul>
         <div class="h-screen grid grid-cols-3 p-20">
-            <div class="col-span-3 items-center text-center">
+            <div class="col-span-3 items-center text-center z-50">
                 <h1 class="text-7xl font-square text-black tracking-[.4em]">
                     JHENRICH D. ROQUIOS
                 </h1>
             </div>
-            <div class="pl-0 col-span-3 flex justify-center lg:col-span-1">
+            <div class="pl-0 col-span-3 flex justify-center lg:col-span-1 z-50">
                 <img src="img/me.png" class="h-[300px] w-[300px]" />
             </div>
-            <div class="col-span-3 lg:col-span-2">
+            <div class="col-span-3 lg:col-span-2 z-50">
                 <div>
                     <h2 class="text-5xl font-inter font-black tracking-[.5em] text-gray-950 leading-relaxed">
                         FULL-STACK<br>
@@ -61,6 +61,12 @@
                 </li>
                 <li class="text-lg text-gray-700 leading-relaxed ">
                     System Projects / Thesis / Capstones 
+                </li>
+                <li class="text-lg text-gray-700 leading-relaxed ">
+                    Data Analysis
+                </li>
+                <li class="text-lg text-gray-700 leading-relaxed ">
+                    Database Management
                 </li>
             </div>
             <div class="flex justify-center col-span-3 lg:col-span-1 lg:justify-end lg:items-end lg:pr-20">
