--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                             </div>
                             <!-- Text content -->
                             <div class="w-full mt-2 lg:mt-5 text-center px-2 lg:px-0">
-                                <p class="text-5xl lg:text-3xl font-bold py-3 lg:py-5 leading-tight ">IT Programmer at Betafoam Corporation (Current)</p>
+                                <p class="text-5xl lg:text-3xl font-bold py-3 lg:py-5 leading-tight lg:tracking-[.1em] font-square">IT Programmer at Betafoam Corporation (Current)</p>
                                 <p class="text-2xl lg:text-xl font-bold leading-relaxed">BS Computer Science Graduate</p>
                             </div>                                
                         </div>
@@ -196,7 +196,7 @@
                     <!-- Bio Paragraph -->
                     <div class="px-2 lg:px-0">
                         <p class="text-4xl lg:text-xl leading-relaxed">
-                            <span class="ml-20 lg:ml-20 font-academy text-7xl lg:text-6xl">A</span> graduate with a 
+                            <span class="ml-20 lg:ml-20 font-square text-7xl lg:text-6xl">A</span> graduate with a 
                             <span class="font-bold">Bachelor's Degree in Computer Science</span>, has a strong 
                             passion for the field of development. Currently working as an 
                             <span class="font-bold">IT Programmer</span>, with expertise in back-end development and database management, plus a working knowledge of data analysis and version control using Git and GitHub.
@@ -206,7 +206,7 @@
                     <!-- Contact Section -->
                     <div class="space-y-4 lg:space-y-6">
                         <div class="text-center">
-                            <h2 class="text-5xl lg:text-4xl font-black font-inter tracking-[.1em] transition-all duration-300">
+                            <h2 class="text-5xl lg:text-4xl font-black font-square tracking-[.1em] transition-all duration-300">
                                 Socials and Contacts
                             </h2>   
                         </div> 
