--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         </div>
 
         <!-- Skills/Portfolio Section (Third Section) -->
-        <div id="third-section" class="box-area-bottom min-h-screen bg-[#B8CFCE] flex items-center justify-center py-8 lg:py-0">
+        <div id="third-section" class="box-area-bottom border-[10px] border-black m-5 min-h-screen bg-[#B8CFCE] flex items-center justify-center py-8 lg:py-0">
             <ul class="absolute top-0 left-0 w-full z-0">
                 <li class="box-area-bottom"></li>
                 <li class="box-area-bottom"></li>
