--- a/index.html
+++ b/index.html
@@ -336,34 +336,45 @@
         </div>
         <div id="fourth-section" class="min-h-screen bg-[#B8CFCE] py-20 grid grid-cols-1 lg:grid-cols-2">
             <div>
-                <div class="font-black tracking-[.5em] hover:underline text-6xl text-center pb-10 font-square"> PROJECTS</div>
-                
-                <!-- Project Titles List -->
+                <div class="font-black tracking-[.5em] hover:underline text-6xl text-center pb-10 font-square"> 
+                    <h1>PROJECTS</h1>
+                    <div class="flex justify-center items-center px-10">
+                        <li class="text-base tracking-tighter font-inter font-normal hover:no-underline px-20 text-justify">Most of the projects are hosted in private repositories, as they were developed for the company and contain proprietary or confidential information.</li>
+                    </div>
+                </div>
                 <div class="flex justify-center font-roboto text-center mb-10">
-                    <ul class="space-y-auto text-2xl text-justify leading-relaxed">
+                    <ul class="space-y-auto text-xl font-bold text-justify leading-relaxed">
                         <li class="hover:text-gray-700 transition-colors cursor-pointer text-justify" onclick="showSlide(0)">
                             • Appointment and Scheduling System
+                            <div class="font-normal text-base tracking-tighter ml-10">-Helps manage appointments, bookings, and schedules efficiently.</div>
                         </li>
                         <li class="hover:text-gray-700 transition-colors cursor-pointer text-justify" onclick="showSlide(1)">
                             • Quality Assurance System
+                            <div class="font-normal text-base tracking-tighter ml-10">-Monitors processes to ensure products or services meet standards.</div>
                         </li>
                         <li class="hover:text-gray-700 transition-colors cursor-pointer text-justify" onclick="showSlide(2)">
                             • Performance Management System
+                            <div class="font-normal text-base tracking-tighter ml-10">-Tracks and evaluates employee performance and goals.</div>
                         </li>
                         <li class="hover:text-gray-700 transition-colors cursor-pointer text-justify" onclick="showSlide(3)">
                             • Appraisal System
+                            <div class="font-normal text-base tracking-tighter ml-10">-Facilitates performance appraisals and feedback collection.</div>
                         </li>
                         <li class="hover:text-gray-700 transition-colors cursor-pointer text-justify" onclick="showSlide(4)">
                             • Record/Document Management System
+                            <div class="font-normal text-base tracking-tighter ml-10">-Organizes, stores, and retrieves digital records and documents.</div>
                         </li>
                         <li class="hover:text-gray-700 transition-colors cursor-pointer text-justify" onclick="showSlide(5)">
                             • Point of Sale and Appointment System
+                            <div class="font-normal text-base tracking-tighter ml-10">-Combines sales processing with appointment scheduling features.</div>
                         </li>
                         <li class="hover:text-gray-700 transition-colors cursor-pointer text-justify" onclick="showSlide(6)">
                             • Inventory Management System
+                            <div class="font-normal text-base tracking-tighter ml-10">-Keeps track of stock levels, orders, and inventory movement.</div>
                         </li>
                         <li class="hover:text-gray-700 transition-colors cursor-pointer text-justify" onclick="showSlide(7)">
                             • Recycling Management System
+                            <div class="font-normal text-base tracking-tighter ml-10">-Manages recycling processes and material tracking effectively.</div>
                         </li>
                     </ul>
                 </div>
@@ -371,7 +382,6 @@
             <div>
                 <div class="font-black tracking-[.5em] hover:underline text-6xl text-center pb-10 font-square"> Skills and Expertise</div>
                 
-                <!-- Project Titles List -->
                 <div class="flex justify-left font-roboto text-center mb-10 px-20 ">
                     <ul class="grid lg:grid-cols-2">
                         <li class="hover:text-gray-700 transition-colors cursor-pointer text-justify pr-2">
