--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <title>JDR Portfolio</title>
     </head>
-    <body class="font-inter bg-[#EAEFEF] h-screen">
+    <body class="font-inter bg-gray-950 h-screen">
         <!-- Section 1 -->
         <ul class="box-area">
             <li></li>
@@ -24,7 +24,7 @@
         </ul>
         <div class="h-screen grid grid-cols-3 p-10">
             <div class="col-span-3 items-center text-center z-50">
-                <h1 class="text-7xl font-square text-black tracking-[.4em]">
+                <h1 class="text-7xl font-square text-black tracking-[.4em] text-stroke">
                     JHENRICH D. ROQUIOS
                 </h1>
             </div>
@@ -33,46 +33,46 @@
             </div>
             <div class="col-span-3 lg:col-span-2 z-50">
                 <div>
-                    <h2 class="text-5xl font-inter font-black tracking-[.5em] text-gray-950 leading-relaxed">
+                    <h2 class="text-5xl font-inter font-black tracking-[.5em] text-amber-500 leading-relaxed">
                         FULL-STACK<br>
                         DEVELOPER
                     </h2>
-                    <p class="text-2xl font-inter font-bold text-gray-700 mt-2 tracking-[.5em]">
+                    <p class="text-2xl font-inter font-bold text-gray-300 mt-2 tracking-[.5em]">
                         BACKEND-HEAVY
                     </p>
                 </div>
                 
-                <p class="text-xl text-gray-700 leading-relaxed tracking-[.5em]">
+                <p class="text-xl text-gray-400 leading-relaxed tracking-[.5em]">
                     I'm a full-stack developer mainly focused on back-end development, with some front-end capabilities.
                 </p>
             </div>
             <div class="col-span-3 lg:col-span-2 lg:pl-10">
                 <div>
-                    <h2 class="text-4xl font-inter font-black tracking-[.5em] text-gray-950 leading-relaxed">
+                    <h2 class="text-4xl font-inter font-white tracking-[.5em] text-gray-950 leading-relaxed">
                         SERVICES
                     </h2>
                 </div>
                 
-                <li class="text-lg text-gray-700 leading-relaxed ">
+                <li class="text-lg text-gray-400 leading-relaxed ">
                     Software Development and Maintenance
                 </li>
-                <li class="text-lg text-gray-700 leading-relaxed ">
+                <li class="text-lg text-gray-400 leading-relaxed ">
                     Web Development and Maintenance
                 </li>
-                <li class="text-lg text-gray-700 leading-relaxed ">
+                <li class="text-lg text-gray-400 leading-relaxed ">
                     System Projects / Thesis / Capstones 
                 </li>
-                <li class="text-lg text-gray-700 leading-relaxed ">
+                <li class="text-lg text-gray-400 leading-relaxed ">
                     Data Analysis
                 </li>
-                <li class="text-lg text-gray-700 leading-relaxed ">
+                <li class="text-lg text-gray-400 leading-relaxed ">
                     Database Management
                 </li>
             </div>
             <div class="flex justify-center col-span-3 lg:col-span-1 lg:justify-end lg:items-end lg:pr-20">
                 <a @click="document.querySelector('#next-section').scrollIntoView({ behavior: 'smooth' })" x-data>
-                    <button class="bg-gray-600 p-3 hover:text-white border-2 border-black">
-                        <span class="font-inter font-black text-4xl tracking-[.5em]">START</span><i></i>
+                    <button class="bg-amber-600 hover:bg-black rounded-bl-full rounded-tl-md rounded-tr-full bg-amber-500 px-5 py-3 hover:text-amber-500 border-2 border-black hover:border-amber-500">
+                        <span class="font-inter mx-5 font-black text-2xl tracking-[.1em]">View More</span><i></i>
                     </button>
                 </a>
             </div>
