--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     JHENRICH D. ROQUIOS
                 </h1>
             </div>
-            <div class="pl-0 col-span-3 flex justify-center lg:col-span-1 z-50">
+            <div class="pl-0 col-span-3 flex justify-center lg:col-span-1 z-50 image-stroke">
                 <img src="img/me.png" class="h-[300px] w-[300px]" />
             </div>
             <div class="col-span-3 lg:col-span-2 z-50">
