--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
         <div class="h-screen grid grid-cols-3 p-10">
             <div class="col-span-3 items-center text-center z-50">
-                <h1 class="text-7xl font-square text-black tracking-[.4em] text-stroke">
+                <h1 class="text-7xl font-square text-amber-500 lg:text-black tracking-[.4em] text-stroke">
                     JHENRICH D. ROQUIOS
                 </h1>
             </div>
