--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="col-span-3 lg:col-span-2 z-50">
                 <div>
-                    <h2 class="text-5xl font-inter font-black tracking-[.5em] text-amber-500 leading-relaxed">
+                    <h2 class=" text-7xl lg:text-5xl font-inter font-black tracking-[.5em] text-amber-500 leading-relaxed">
                         FULL-STACK<br>
                         DEVELOPER
                     </h2>
