--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         </a>
                     </button>
                     <button class="bg-amber-500 rounded-tl-full rounded-br-full px-2 font-inter font-black border-2 border-black hover:bg-black hover:text-amber-500 hover:border-amber-500">
-                        <a href="resume.pdf" download class="block p-3">
+                        <a href="resume.pdf" class="block p-3">
                             Resume 
                         </a>
                     </button>
