--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="button-style.css">
         <script src="tailwind-config.js"></script>
-        <link rel="icon" href="img/face-button.png" type="image/png">
+        <link rel="icon" href="img/jd-logo.png" type="image/png">
         <link rel="stylesheet" href="contribution.css">
 
         <title>JDR Portfolio</title>
     </head>
-    <body class="font-inter bg-gray-950 h-screen">
+    <body class="font-inter bg-gray-950 h-screen" style="background: url('img/jd-bg.png') no-repeat center center fixed; background-size: cover;">
+
         <!-- Section 1 -->
         <ul class="box-area">
             <li></li>
@@ -33,16 +34,16 @@
             </div>
             <div class="col-span-3 lg:col-span-2 z-50">
                 <div>
-                    <h2 class=" text-7xl lg:text-5xl font-inter font-black tracking-[.5em] text-amber-500 leading-relaxed">
+                    <h2 class=" text-7xl lg:text-5xl font-inter font-black tracking-[.5em] text-amber-500 text-stroke-black leading-relaxed">
                         FULL-STACK<br>
                         DEVELOPER
                     </h2>
-                    <p class="text-2xl font-inter font-bold text-gray-300 mt-2 tracking-[.5em]">
+                    <p class="text-2xl font-inter font-bold text-gray-300 mt-2 tracking-[.5em] text-stroke-black">
                         BACKEND-HEAVY
                     </p>
                 </div>
                 
-                <p class="text-xl text-gray-400 leading-relaxed tracking-[.5em]">
+                <p class="text-xl text-black font-bold leading-relaxed tracking-[.5em]  ">
                     I'm a full-stack developer mainly focused on back-end development, with some front-end capabilities.
                 </p>
                 <div class="flex justify-center gap-x-5 items-center mt-5">
@@ -92,7 +93,7 @@
         </div>
 
         <!-- Combined Section 2 & 3 - Mobile Optimized -->
-        <div id="next-section" class="min-h-screen lg:h-auto bg-amber-500">
+        <div id="next-section" class="min-h-screen lg:h-auto bg-amber-400">
             <div class="p-3 lg:p-5">
                 
                 <!-- Main Content Container -->
@@ -259,19 +260,19 @@
             <!-- Mobile: Stack cards vertically, Desktop: Keep horizontal -->
             <div class="flex flex-col lg:flex-row w-[90%] lg:w-[70%] bg-[#333446] max-w-[800px] lg:max-w-[8000vh] h-full lg:h-[500px] p-4 lg:px-5 gap-4 lg:gap-5 transition-all duration-[400ms] group">
                 <div class="relative group bg-black border-4 border-[#B8CFCE] card lg:flex-1 h-[500px] lg:h-full cursor-pointer transition-all duration-400 lg:odd:-translate-y-5 lg:even:translate-y-5 hover:grayscale-0 lg:hover:flex-[3] hover:h-full lg:hover:h-full">
-                    <img src="img/bg_55.png" class="w-full h-full object-cover" />
+                    <img src="img/tyremaster/tyremaster.png" class="w-full h-full object-cover" />
                     <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
                         <p class="text-white text-center px-4 md:text-4xl lg:text-base max-w-[90%] max-h-[90%] overflow-auto hide-scrollbar">
-                            My interest in the IT field began in high school when I took ICT as my TLE subject in 9th grade. That's where I learned my first IT skills, such as computer troubleshooting, hardware basics, and gained insights into various areas of IT. When I went to college, I chose to study Computer Science to further expand my knowledge in software development and programming.
+                            I have experience with UI/UX design and wireframing, which allows me to understand and contribute to creating user-friendly interfaces. While my strength is in back-end development, this knowledge helps me collaborate effectively on designing functional and visually structured applications.
                         </p>
                     </div>
                 </div>           
 
                 <div class="relative border-4 border-[#B8CFCE] card lg:flex-1 h-[450px] lg:h-full cursor-pointer transition-all duration-[400ms] lg:odd:-translate-y-5 lg:even:translate-y-5 hover:grayscale-0 lg:hover:flex-[3] hover:h-full lg:hover:h-full">
-                    <img src="img/laravel.png" class="w-full h-full object-cover" />
+                    <img src="img/laravel.png" class="w-full h-full object-fill" />
                     <div class="absolute inset-0 flex items-center justify-center bg-black/50 opacity-0 transition-opacity hover:duration-700 hover:opacity-100">
                         <p class="text-white text-center px-4 text-sm lg:text-base md:text-4xl">
-                            I have strong experience in web development using Laravel, including the TALL stack and the Inertia Vue approach. While my focus is on backend development, I am also proficient in Livewire, Tailwind CSS, and Alpine.js.
+                            I am experienced in web development with Laravel and currently work with the TALL, VILT, and RILT stacks. While my main focus is backend development, I also actively use Livewire, Vue, Inertia, React, Tailwind CSS, and Alpine.js.
                         </p>
                     </div>
                 </div>
